Updated padding on Panel to be more customizable; fixed Button, Item, Header, BodyText padding; Updated component spacing to match spec
Enact-DCO-1.0-Signed-off-by: Blake Stephens <blake.stephens@lge.com>

--- a/BodyText/BodyText.module.less
+++ b/BodyText/BodyText.module.less
@@ -5,8 +5,8 @@
 
 .bodyText {
 	.sand-body-text();
-	margin-left: @sand-spotlight-outset;
-	margin-right: @sand-spotlight-outset;
+	margin: @sand-bodytext-margin;
+	padding: @sand-bodytext-padding;
 
 	&.small {
 		font-size: @sand-body-small-font-size;
