--- a/Panels/Panels.module.less
+++ b/Panels/Panels.module.less
@@ -143,7 +143,6 @@
 
 .panels.option {
 	width: @sand-panels-optionpanels-width;
-	padding: @sand-panel-option-padding;
 
 	// Skin colors
 	.applySkins({
